--- a/index.css
+++ b/index.css
@@ -90,12 +90,13 @@ margin: 2px 2px 2px 2px;
 color: hsl(0, 0%, 100%);
 }
 #fifteen{
-background-color: hsl(172, 67%, 45%);
+background-color: hsl(183, 100%, 15%);
 border-radius: 2px;
 border:none;
 width: 55px;
 height: 23px;
 margin: 2px 2px 2px 2px;
+color: hsl(0, 0%, 100%);
 }
 #twentyFive{
     background-color:  hsl(183, 100%, 15%);
@@ -120,9 +121,10 @@ color: hsl(0, 0%, 100%);
 color:hsl(183, 100%, 15%) ;
 border-radius: 2px;
 border:none;
-width: 55px;
+width: 50px;
 height: 23px;
 margin: 2px 2px 2px 2px;
+background-color: hsl(189, 41%, 97%);
 }
 #resetBtn{
     background-color:hsl(172, 67%, 45%);
@@ -177,4 +179,12 @@ margin: 20px 20px 20px 145px;
 
 #resultt1{
 display: flex;
+}
+
+.highLight{
+    background-color:sl(172, 67%, 45%);
+    color:  hsl(184, 14%, 56%);
+}
+.reset{
+    background-color:hsl(183, 100%, 15%);
 }
